<resources>
    <string name="app_name">Digital Pass Wallet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_item_settings">Settings</string>
    <string name="add_pass">Add Pass</string>
    <string name="pass_barcode_cd">Barcode</string>
    <string name="pass_logo_cd">Logo</string>
    <string name="pass_thumbnail_cd">Thumbnail</string>
    <string name="strip_cd">Strip Image</string>
    <string name="background_image_cd">Background Image</string>
    <string name="more_info_cd">More Information</string>
    <string name="delete_button_text">Delete</string>
    <string name="close_button_text">Close</string>
    <string name="add_from_file">Add from file</string>
    <string name="create_from_form">Create from form</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_create_pass_form">Create Pass</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
