<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data class="CouponDataBinding">

        <variable
            name="passViewModel"
            type="com.diyankomitov.digitalpasswallet.viewmodel.pass.PassViewModel" />

        <variable
            name="passViewHandler"
            type="com.diyankomitov.digitalpasswallet.views.pass.util.PassViewHandler" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorPrimary"
            android:indeterminateTintMode="src_in" />

        <com.christophesmet.android.views.maskableframelayout.MaskableFrameLayout
            android:id="@+id/card_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:visibility="gone"
            app:mask="@drawable/mask_coupon"
            app:porterduffxfermode="DST_OUT">

            <include
                android:id="@+id/pass_item_back"
                layout="@layout/pass_component_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                bind:passViewHandler="@{passViewHandler}"
                bind:passViewModel="@{passViewModel}" />

        </com.christophesmet.android.views.maskableframelayout.MaskableFrameLayout>

        <com.christophesmet.android.views.maskableframelayout.MaskableFrameLayout
            android:id="@+id/card_front"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:visibility="gone"
            app:mask="@drawable/mask_coupon"
            app:porterduffxfermode="DST_OUT">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@{safeUnbox(passViewModel.backgroundColor)}"
                app:cardElevation="1dp"
                app:cardMaxElevation="2dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <include
                        android:id="@+id/pass_item_header"
                        layout="@layout/pass_component_header"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        bind:passViewModel="@{passViewModel}" />

                    <ImageView
                        android:id="@+id/strip"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/stripTallHeight"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/strip_cd"
                        android:src="@{passViewModel.stripPath}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/pass_item_header" />

                    <TextView
                        android:id="@+id/primary_label_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@{passViewModel.primaryLabel1}"
                        android:textColor="@{safeUnbox(passViewModel.labelColor)}"
                        app:layout_constraintEnd_toEndOf="@+id/strip"
                        app:layout_constraintStart_toStartOf="@+id/strip"
                        app:layout_constraintTop_toTopOf="@+id/strip" />

                    <TextView
                        android:id="@+id/primary_value_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:maxLines="3"
                        android:text="@{passViewModel.primaryValue1}"
                        android:textColor="@{safeUnbox(passViewModel.foregroundColor)}"
                        android:textSize="@dimen/headerFieldValueTextSize"
                        app:layout_constraintEnd_toEndOf="@+id/primary_label_1"
                        app:layout_constraintStart_toStartOf="@+id/primary_label_1"
                        app:layout_constraintTop_toBottomOf="@+id/primary_label_1"
                        app:minTextSize="@dimen/fieldLabelTextSize"
                        app:sizeToFit="true" />

                    <include
                        layout="@layout/pass_component_secondary_and_auxiliary_fields"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        app:alignContent="flex_start"
                        app:alignItems="flex_start"
                        app:dividerDrawable="@drawable/flexbox_divider"
                        app:flexWrap="wrap"
                        app:justifyContent="flex_start"
                        app:layout_constraintBottom_toTopOf="@+id/barcode_card"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/strip"
                        app:showDivider="middle"
                        bind:passViewModel="@{passViewModel}" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/barcode_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:elevation="1dp"
                        app:cardBackgroundColor="@android:color/white"
                        app:cardCornerRadius="8dp"
                        app:cardMaxElevation="2dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHeight_percent="0.3"
                        app:layout_constraintStart_toStartOf="parent">

                        <ImageView
                            android:id="@+id/barcode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="6dp"
                            android:contentDescription="@string/pass_barcode_cd"
                            android:scaleType="centerInside"
                            android:src="@{passViewModel.barcode}" />
                    </androidx.cardview.widget.CardView>

                    <ImageButton
                        android:id="@+id/more_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:paddingEnd="16dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/more_info_cd"
                        android:onClick="@{passViewHandler::onClickMoreInfo}"
                        app:color="@{safeUnbox(passViewModel.foregroundColor)}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/ic_more_info" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
        </com.christophesmet.android.views.maskableframelayout.MaskableFrameLayout>
    </FrameLayout>

</layout>
